docs(css): ensure all type-hints have a background color
If the type of a type-hint was not recognized, say a "Promise", then
the background color was left as white.  Given that the default
foreground color is also white, this meant that such type-hints were
invisible.

Closes #6934

--- a/docs/app/assets/css/docs.css
+++ b/docs/app/assets/css/docs.css
@@ -422,6 +422,7 @@ iframe.example {
 
 .type-hint {
   display:inline-block;
+  background: gray;
 }
 
 .variables-matrix .type-hint {
@@ -567,7 +568,7 @@ h4 {
 }
 
 .return-arguments td:first-child {
-  width:100px; 
+  width:100px;
 }
 
 ul.methods > li,
